--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_register_success">register_success</string>
+    <string name="title_activity_home">Home</string>
+
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
